--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </button>
             <div class="dropdown-content">
               <a href="ragispoons.html" target="blank">Ragi Spoons</a>
-              <a href="ppebricks.html">PPE and Masks made Bricks</a>
+              <a href="ppebricks.html" target="blank">PPE and Masks made Bricks</a>
               <a href="#">Plastic Bottle recycler</a>
               <a href="#">Plastic Roads</a>
               <a href="environmenthotels.html" target="blank">Environment-Friendly Hotels</a>
